--- a/swift/섹션 4/Get Ready.playground/섹션 4.md
+++ b/swift/섹션 4/Get Ready.playground/섹션 4.md
@@ -13,13 +13,13 @@ a = a + 10
 
 ```
 
-#### - 프로그래밍에서 사용하는 =(Equal)은 할당의 의미이다.(할당연산자)
+- 프로그래밍에서 사용하는 =(Equal)은 할당의 의미이다.(할당연산자)
 
-#### - =(등호)는 같다는 뜻이 아니다.
+- =(등호)는 같다는 뜻이 아니다.
 
-#### - = (등호)를 기준으로 오른쪽에 있는 무언가를 왼쪽에 담는다는 의미(할당)
+- = (등호)를 기준으로 오른쪽에 있는 무언가를 왼쪽에 담는다는 의미(할당)
 
-#### - 프로그래밍에서 같다는 것은 ==을 사용
+- 프로그래밍에서 같다는 것은 ==을 사용
 
 #### = == (같다) !=(같지 않다)
 
