--- a/swift/섹션 4/Get Ready.playground/섹션 4.md
+++ b/swift/섹션 4/Get Ready.playground/섹션 4.md
@@ -21,53 +21,52 @@ a = a + 10
 
 - 프로그래밍에서 같다는 것은 ==을 사용
 
-#### = == (같다) !=(같지 않다)
+- == (같다) !=(같지 않다)
 
 ### 2) 대문자와 소문자
 
-#### - 프로그래밍에서는 대문자와 소문자를 명확하게 구분하므로, 잘못 입력 했을 때 오류가 발생함. 반드시 주의!(초보자들이 주로 하는 실수)
+- 프로그래밍에서는 대문자와 소문자를 명확하게 구분하므로, 잘못 입력 했을 때 오류가 발생함. 반드시 주의!(초보자들이 주로 하는 실수)
 
-#### - 대부분 소문자로 시작, 예외적으로 대문자로 시작하는 것들이 있음
+- 대부분 소문자로 시작, 예외적으로 대문자로 시작하는 것들이 있음
 
-#### - 중간에는 대문자 / 숫자가 쓰일 수 있다. 다만, 시작은 소문자
+- 중간에는 대문자 / 숫자가 쓰일 수 있다. 다만, 시작은 소문자
 
 ### 3) 키워드
 
-#### - 약속어(스위프트에서 특별한 의미로 사용하겠다고 미리 정해놓은 단어
+- 약속어(스위프트에서 특별한 의미로 사용하겠다고 미리 정해놓은 단어
 
-#### - var, func, if....
+- var, func, if....
 
-#### - 스위프트에는 약 70여개의 키워드가 존재
+- 스위프트에는 약 70여개의 키워드가 존재
 
-#### - 키워드는 다른 의미로 사용 불가능
+- 키워드는 다른 의미로 사용 불가능
 
 ### 4) 주석(Comment)
 
-#### - 컴퓨터에게 코드를 읽을 필요가 없다고(무시해도 된다고) 알려주는 부분
+- 컴퓨터에게 코드를 읽을 필요가 없다고(무시해도 된다고) 알려주는 부분
 
-#### - 일반적으로 프로그래머들이 메모장처럼 활용
+- 일반적으로 프로그래머들이 메모장처럼 활용
 
-#### - //:한줄주석 사용시(슬래시 두개), /_ 문장 _/ 여러줄 주석 사용시
+- //:한줄주석 사용시(슬래시 두개), /_ 문장 _/ 여러줄 주석 사용시
 
-#### - 단축키 Command + /
+- 단축키 Command + /
 
-#### - ;(세미콜론):스위프트에서 세미콜론은 선택사항
+- ;(세미콜론):스위프트에서 세미콜론은 선택사항
 
 ### 5) 줄 맞추기
 
-#### - 일반적으로 중괄호 안에서 들여쓰기(Indentation)를 통해, 코드의 가독성을 높임
-
-#### - 4칸이 기본(디폴트) 설정
+- 일반적으로 중괄호 안에서 들여쓰기(Indentation)를 통해, 코드의 가독성을 높임
+- 4칸이 기본(디폴트) 설정
 
 ### 6) print 함수
 
-#### - 모든 첫 프로그래밍의 시작은 출력부터 시작
+- 모든 첫 프로그래밍의 시작은 출력부터 시작
 
-#### - print:출력을 위한 함수
+- print:출력을 위한 함수
 
-#### - 스위프트에서는 프린트구문에 쌍따옴표("")를 꼭 붙여야 한다.
+- 스위프트에서는 프린트구문에 쌍따옴표("")를 꼭 붙여야 한다.
 
-#### - 숫자는 쌍따옴표를 붙여도 되고 안붙여도 된다. 문자열은 꼭 붙여야 한다.
+- 숫자는 쌍따옴표를 붙여도 되고 안붙여도 된다. 문자열은 꼭 붙여야 한다.
 
 ```
 print("Hello, World")
