--- a/swift/섹션 5/섹션 5.md
+++ b/swift/섹션 5/섹션 5.md
@@ -1,1 +1,105 @@
 # 변수와 상수 / 데이터 타입(The Basics)
+
+## 1) 변수
+
+- 변수(Variable):데이터를 담을 수 있는 공간(바구니)
+
+- (변수의 이름: 식별자 / 한 영역에 유일한 하나의 이름만 사용해야함)
+
+- 프로그램 동작의 첫번째 단계:메모리에 값(데이터)을 저장 (변수)
+
+```
+var a = 3     // 변수를 선언하면서 저장
+var b = 7
+
+
+//b = 9
+//b = b + 2
+//
+//var c = a + b
+
+
+print(a + b)
+//print(c)
+
+
+
+// 변수를 여러개 한꺼번에 선언하는 방법: ,(콤마)로 연결:콤마를 통해서도 선언할 수 있다는 뜻.
+
+var x = 1, y = 2, z = 3
+
+
+
+// 새로운 공간을 만들고 값을 복사(Copy)해서 저장
+
+var newRoom = b
+```
+
+### 변수의 이름 / 이름 짓기 규칙
+
+- 변수의 이름(식별자)은 소문자로 시작(대문자로 시작하는 것은 권장하지 않음)
+
+- 중간에 숫자가 들어가는 것은 Ok(숫자가 첫 글자로 시작하는 것은 금지)
+
+- 다른 언어에서는 중간에 \_(언더바)를 사용하기도 하지만(name_of_you), 스위프트에서는 관습적으로 대문자를 사용(nameOfYou)
+
+```
+var nameOfYou = "임꺽정"
+var realName = "쾌걸조로"
+
+
+// 변수의 이름은 소문자로 시작(대문자로 시작하는 것은 권장하지 않음), 중간에 숫자들어가는 것은 Ok. (숫자를 첫글자로 시작하는 것은 금지)
+
+
+
+var π = 3.1415926
+var 你好 = "你好世界"
+var 🐶🐮 = "dogcow"
+var 변수 = "안녕하세요"
+
+
+// 특수문자, 한자, 한글 등 사용가능 하지만, 관습적으로 잘 사용하지는 않음
+
+
+
+
+var number1 = 5
+var number2 = 7
+var number3 = number1 + number2
+
+
+number3
+
+
+print(number3)
+
+```
+
+### 변수는 실제로 어떻게 사용될까?
+
+```
+var name = "홍길동"
+var age = 20
+var address = "서울 강남구"
+
+
+
+
+//print(name, age)
+//print(name, age, address)
+
+
+name = "전지현"
+
+
+print(name, age)
+
+
+//print("저의 이름은 \(name)입니다.")
+
+age = 30
+
+
+// 사용 예시
+print("저의 이름은 \(name)입니다. 저의 나이는 \(age)살 입니다. 그리고 \(address)에 살고 있습니다.")
+```
