--- a/swift/섹션 5/섹션 5.md
+++ b/swift/섹션 5/섹션 5.md
@@ -2,7 +2,7 @@
 
 ## 1) 변수
 
-- 변수(Variable):데이터를 담을 수 있는 공간(바구니)
+- 변수(Variable):변하는 데이터를 담을 수 있는 공간(바구니)
 
 - (변수의 이름: 식별자 / 한 영역에 유일한 하나의 이름만 사용해야함)
 
@@ -102,4 +102,74 @@ age = 30
 
 // 사용 예시
 print("저의 이름은 \(name)입니다. 저의 나이는 \(age)살 입니다. 그리고 \(address)에 살고 있습니다.")
+
 ```
+
+## String Interporation(문자열 보간법) -> 변수를 문자열 안에서 출력하는 방법
+
+- Swift에서의 문자열 보간법: \(변수명) // 언어마다 규칙이 조금씩 다름
+
+"\(삽입할 변수)" -> 문자열 중간에 삽일할때 사용
+
+## 2) 상수(Constants):변하지 않는 데이터(자료)를 담을 수 있는 공간(바구니)
+
+- 상수를 사용하는 이유:가독성 / 특정 의미를 알아보기 쉽게
+
+- 변수와 상수를 통틀어 변수(저장된 데이터라는 관점에서)라고 일반적으로 부르기도 함
+
+# 스위프트의 데이터 타입:9강
+
+## 변수 선언의 정식 문법
+
+### 변수 선언과 저장
+
+```
+var a: Int = 10
+
+```
+
+- 변수를 선언하면서 저장 (메모리 공간을 먼저 생성하는 동시에 데이터를 저장)
+
+## 스위프트의 데이터타입
+
+### 1) 데이터 타입의 이해
+
+- 타입이 왜 필요할까?
+
+- 컴퓨터는 사람의 뇌와 다르다.
+
+- 데이터를 얼마 만큼의 크기, 그리고 어떤 형태로 저장할 것인가에 대한 약속이 필요
+
+```
+var i: Int = 4
+var j: Int = 3
+
+
+//i = 3.4       // 소수점 타입 할당이 안됨
+
+
+var k = i + j
+print(k)
+
+
+
+// 타입은 메모리 공간의 크기와 연관이 있다.
+```
+
+## 스위프트에서 사용하는 데이터타입
+
+- 1. 정수형(Int):정수 타입 / -5, -4, -3, 0, 1, 3, 5 / 8바이트(64비트 환경에서)
+
+- 2. 실수(Float):부동소수점(6자리) / 6자리까지의 정보를 정확하게 저장 / 4바이트(32바이트)
+
+- 3. 실수(Double:부동소수점(15자리) / 15자리까지의 정보를 정확하게 저장 / 8바이트(64비트)
+
+- Float과 Double은 정밀도에서 많이 차이가 난다.
+
+- (지수와 가수를 나누어 복잡한 알고리즘으로 저장한다.)
+
+- 4. 문자(Charactor):하나의 문자(한글자) / "A", "B", "C", " "(공백문자)...
+
+- 5. 문자열(String):문자열 / "Hello", "안녕하세요.", ""(빈문자열)
+
+- 6. 참과 거짓(Bool): 참과 거짓 / true 또는 False를 저장
