--- a/swift/섹션 5/섹션 5.md
+++ b/swift/섹션 5/섹션 5.md
@@ -299,3 +299,37 @@ print(n3)
 # 타입은 왜 필요할까?
 
 - 결국 데이터를 메모리라는 공간에 어떤 크기 / 형태로 저장할 것인지에 관한 문제
+
+# 타입 에일리어스:11강
+
+## 타입 에일리어스(Type Alias):프로그래밍에서 수학의 치환과 동일한 문법
+
+```
+typealias Name = String
+
+```
+
+- 코드 어디에서나 한줄로 타입 별칭을 붙이는 위와 같은 문법을 선언하면 됨(왼쪽에 치환된 별칭이 위치)
+
+- 기존 선언되어 있는 타입에 새로운 별명 / 별칭을 붙여 가독성을 높임
+
+```
+
+// 왼쪽에 치환된 별칭이 위치
+typealias Name = String
+
+// Name타입이 의미하는 것은 String과 완전히 동일
+let name: Name = "홍길동"
+
+// 스위프트에서는 어떤 형태든 치환이 가능
+
+typealias Something = (Int) -> String
+
+func someFunction(completionHandler: (Int) -> String) {
+
+}
+
+func someFunction2(completionHandler: Something) {
+
+}
+```
