--- a/swift/섹션 6/섹션 6.md
+++ b/swift/섹션 6/섹션 6.md
@@ -1,1 +1,73 @@
 # 기본연산자(Basic Operators)
+
+## 1) 연산자 기초:연산자란? 연산자의 종류
+
+- 연산자(Operator):값을 검사, 바꾸거나 또는 조합하기 위해 사용하는 특수한 '기호(Symbol)'나 '구절(Phrase)'을 뜻함.
+
+- [피 연산자의 갯수의 따른 연산자의 구분]
+
+- 1.단항연산자:단일 대상의 바로 앞 또는 뒤에 위치하는 연산자
+
+```
+(예시) -a, +b, !a, a... 등이 존재
+
+```
+
+- 2.이항연산자:두 개의 대상 가운데 위치하여 검사 및 계산(대부분 이항연산자 형태로 사용)
+
+```
+(예시) a + b, a - b, a * b, a / b, a % b, a >= b 등이 존재
+
+```
+
+- 3.삼항연산자:세 개의 대상을 조합하여 특수한 계산을 함
+
+- 스위프트에서는 단 한개의 삼항연산자가 존재한다.
+
+```
+(예시) a ? b: c
+
+```
+
+## 2) 기본연산자
+
+### 할당 연산자(Assignment Operator)
+
+- 할당 연산자:오른쪽에 값을 왼쪽에 대입
+
+- 왼쪽의 값을 오른쪽의 값으로 초기화하거나 업데이트함
+
+```
+
+let num2 = 10
+var num1 = 5
+
+num1 = num2
+
+//이것은 절대로 같다는 뜻이 아니다.
+
+//오른쪽에 있는 num2라는 상수 값 10을 num1에 넣는다는 뜻이다. 같다는 의미의 연산자는 ==
+
+print(num1)
+
+```
+
+### 산술 연산자(Arithmetic Operator)
+
+- 사칙 연산 등 기본적으로 스위프트에 내장되어 있는 기능
+
+#### 산술(이항) 연산자
+
+- +:더하기 연산자(단항 사용도 가능: +a)
+
+- -:빼기 연산자(단항 사용도 가능: -a)
+
+- \*:곱하기 연산자
+
+- /:나누기 연산자(몫)
+
+- %:모듈로 연산자(나머지)
+
+# 연산시 타입 반드시 주의
+
+## 같은 타입의 데이터끼리만 연산 및 저장이 가능
