--- a/swift/섹션 6/섹션 6.md
+++ b/swift/섹션 6/섹션 6.md
@@ -71,3 +71,173 @@ print(num1)
 # 연산시 타입 반드시 주의
 
 ## 같은 타입의 데이터끼리만 연산 및 저장이 가능
+
+# 복합할당 / 비교 / 논리 연산자/ 연산의 우선순위
+
+## 복합 할당(Compound Assignment) 연산자
+
+```
+var value = 0
+
+
+//value = value + 10
+value += 10
+
+
+//value = value - 5
+value -= 5
+
+
+//value = value * 2
+value *= 2
+
+
+//value = value / 2
+value /= 2
+
+
+//value = value % 2
+value %= 2
+
+
+
+//value++    //다른 언어에서 1을 증가시키는 방법(스위프트에서 지원하지 않음)
+
+
+//스위프트에서의 올바른 방식
+value += 1
+
+
+```
+
+## 비교(Comparison) 연산자:결과적으로 문장의 평가값은 참 / 거짓으로 도출
+
+```
+a = 456
+b = 123
+
+// 같다(Equal to operator)
+a == b
+
+// 같지 않다(Not equal to operator)
+a != b
+
+// 크다(Greater than operator)
+a > b
+
+// 크거나 같다(Greater than or equal to operator)
+a >= b
+
+// 작다(Less than operator)
+a < b
+
+// 작거나 같다(Less than or equal to operator)
+a <= b
+
+
+
+
+var c = (b == 123)
+
+
+
+// if문 하고 결합되어서 주로 사용
+
+```
+
+## 논리(Logical) 연산
+
+```
+// ⭐️ Logical NOT Operator
+!true
+!false
+
+
+// Logical AND Operator(앤드, 그리고)
+true && true
+true && false
+false && true
+false && false
+
+
+// Logical OR Operator(또는)
+true || true
+true || false
+false || true
+false || false
+
+
+
+
+// 아이디도 6자리 이상이고, 비밀번호도 6자리 이상이다.
+
+
+// 하다보면 자연스럽게 이해하게 됨 ===> 스트레스 받지 마세요.
+
+
+
+// ! 상당히 많이 사용함 (앱을 만들때 직접 많이 써보면서 익숙해 질 것임)
+
+c = !true
+```
+
+## 연산(계산)의 우선순위 지정:기본적으로 곱하기 우선
+
+```
+1 + 2 * 3 + 3
+1 * (2 - 3)
+
+
+/**===================================
+ 연산의 우선순위
+ - 1. * /              곱하기/나누기
+ - 2. + -              더하기/빼기
+ - 3. <=  >  ==  !=    비교
+ - 4. &&  ||           논리
+ - 5. 삼항연산자
+ - 6. = +=             할당, 복합할당
+ ===================================*/
+
+
+
+// 연산의 우선 순위 참고
+// https://developer.apple.com/documentation/swift/swift_standard_library/operator_declarations
+
+```
+
+## 접근연산자:점문법 / 명시적 멤버 표현식(Explicit Member Expression)
+
+### 접근연산자의 활용
+
+- 1. 랜덤으로 숫자 얻기
+
+```
+Int.random(in:1...100)
+```
+
+- 2. 글자 수 세기
+
+```
+var name = "Hello"
+
+name.count
+
+```
+
+```
+// 접근 연산자라고 불리는, .(점)은 어떤 의미일까?
+
+
+
+Int.random(in: 1...3)
+
+var number = Int.random(in: 1...5)
+
+
+
+var name = "스티브"
+
+
+print(name.count)
+
+```
