--- a/swift/섹션 7/섹션 7.md
+++ b/swift/섹션 7/섹션 7.md
@@ -1,1 +1,108 @@
 # 조건문
+
+## 프로그래밍의 기본 원리와 if 조건문
+
+### 1) 조건문(if문)
+
+- 참(true) 또는 거짓(false)의 특정 조건에 따라 특정 조건만 실행하게 할 수 있는 문장
+
+- 조건의 자리에는 참 또는 거짓이 나와야 함
+
+```
+
+var num = 100
+
+if num >= 80 {
+    print("80보다 크다")
+}
+
+```
+
+### 조건문(if-else)
+
+```
+var num2 = 100
+
+if num2 <= 50 {
+    print("50보다 작거나 같다.) // 만약에 num2라는 변수가 50보다 작거나 같다면 if 구문의 프린트문을 출력
+} else {
+    print("50보다 크다.") // 그렇지 않다면 else 구문의 프린트문을 출력
+}
+
+```
+
+### if-else if-else
+
+```
+numb3 = 70
+
+if num3 <= 50 {
+    print("50보다 작거나 같다.")
+} else if num3 >= 80 {
+    print("80보다 크거나 같다.")
+} else {
+    print("50보다 크고 80보다 작거나 같다.")
+}
+
+//else if 구문은 새로운 조건 추가 가능
+```
+
+### if문에서는 논리적인 구조 및 조건의 순서가 중요
+
+```
+// 조건의 확인 순서를 잘 고려해야함 ==========
+
+var score = 100
+
+//순서가 잘못되었음. 낮은 점수로부터 높은 점수로 가는 오름차순이 아닌 내림차순으로 되어야 함
+//그렇지 않으면 if 구문 아래의 조건이 실행될 수 없음
+
+if score >= 70 {
+    print("70점이상입니다.")
+} else if score >= 80 {
+    print("80점이상입니다.")
+} else if score >= 90 {
+    print("90점이상입니다.")
+} else {
+    print("70점미만입니다.")
+}
+
+// 올바르게 수정해 본다면 ================
+
+if score >= 90 {                // 범위가 작은 조건이 먼저 와야함
+    print("90점이상입니다.")
+} else if score >= 80 {
+    print("80점이상입니다.")
+} else if score >= 70 {
+    print("70점이상입니다.")
+} else {
+    print("70점미만입니다.")
+}
+```
+
+### 2) 조건을 &&(and), ||(or)로 연결하는 것도 가능
+
+- 프로그래밍에서 대부분의 경우 사용
+
+- 예시)
+
+- 아이디가 6자리 이상인지? / 비밀번호가 10자리 이상이고, 특수문자를 포함하는지?
+
+```
+var email = "a@gmail.com"
+var password = "1234"
+
+
+
+if email == "a@gmail.com" && password == "1234" {
+    print("메인페이지로 이동")
+}
+
+
+
+if email != "a@gmail.com" || password != "1234" {
+    print("경고메세지 띄우기")
+    print("이메일주소 또는 패스워드가 올바르지 않습니다.")
+}
+
+```
