--- a/swift/섹션 8/섹션 8.md
+++ b/swift/섹션 8/섹션 8.md
@@ -1,1 +1,56 @@
 # 튜플
+
+## 튜플 기본:19강
+
+- 튜플:2개 이상의 연관된 데이터(값)을 저장하는 Compound(복합 / 혼합) 타입
+
+- 특별하게 타입이 정해져 있지 않음
+
+- 포함될 데이터의 갯수를 마음대로 정의하기 나름
+
+- 멤버(데이터의 종류 및 갯수)는 튜플을 만들때 결정되므로 "추가 / 삭제" 불가
+
+```
+
+let twoNumbers: (Int, Int) = (1, 2)
+//type(of: twoNumbers) ->타입을 알려주는 함수
+
+let threeNumbers = (1, 2, 5)
+
+var threeValues = ("홍길동", 20,  "서울")
+
+
+```
+
+### Named Tuple(이름이 매겨진 튜플):코드의 가독성이 높아짐
+
+```
+// 일반적으로 위처럼 사용하면, 혼동할 가능성이 큼
+
+let iOS = (language: "Swift", version: "5")
+
+iOS.0
+iOS.1
+
+iOS.language
+iOS.version
+```
+
+### 튜플의 분해
+
+- 튜플의 각 요소를 각각 상수 / 변수화 가능 (바인딩)
+
+- 데이터를 분해해서 활용할 수 있게 됨
+
+```
+
+let (first, second, third) = threeNumbers //let first = 1, second = 2, third = 5
+first
+second
+third
+
+//타입 앨리어스를 이용해서 치환하여 사용 가능
+
+typealias gridPoint = (Int, Int)
+
+```
