--- a/swift/섹션 9/섹션 9.md
+++ b/swift/섹션 9/섹션 9.md
@@ -35,3 +35,137 @@ var a = 10
 
 
 ```
+
+- 삼항 연산자 단독으로 쓰이기 보다는, 결과값을 대입하는데 주로 사용
+
+- 앱을 실제로 만들면서 많이쓰이므로 익숙해짐
+
+### 2) 범위 연산자(Range Operators)
+
+- 범위연산자:스위프트에서 숫자의 범위를 간편하게 표시할 때 사용
+
+- 제한된 숫자의 범위를 표기하기 위한 연산자. 자체가 특별한 타입을 의미
+
+- 예시) 1...10 (정수 1부터 10까지의 집합)
+
+- 내림차순 형식으로 표기 불가능.(내림차순으로 변환은 가능)
+
+- 실수 형식의 범위도 가능(다만, 사용하는 경우는 드뭄)
+
+- Switch문에서 패턴 매칭과 사용
+
+- For문과 주로 함께 사용(정수인 경우)
+
+- 배열의 서브스크립트 문법과 함께 사용
+
+#### Closed Range Operator(닫힌 범위연산자)
+
+```
+
+let range = 1 ... 10     //ClosedRange<Int>
+
+let range1 = 1...      //PartialRangeFrom<Int>
+
+let range2 =  ...10    //PartialRangeThrough<Int>
+
+// One-Sided 표기시에는 숫자와 범위연산자를 붙여서 써야함
+
+```
+
+#### Half-Open Range Operator(반 개방 범위연산자)
+
+```
+
+let rangeH = 1 ..< 10     //Range<Int>
+
+let rangeH1 =  ..<10    //PartialRangeUpTo<Int>
+
+// One-Sided 표기시에는 숫자와 범위연산자를 붙여서 써야함
+
+```
+
+### 범위연산자의 활용
+
+#### 1) Switch문의 케이스에서 사용
+
+```
+for index in 1...5 {
+    print("\(index) times 5 is \(index * 5)")
+}
+
+
+
+let names = ["Anna", "Alex", "Brian", "Jack"]
+let count = names.count
+
+
+
+for i in 0..<count {
+    print("Person \(i + 1) is called \(names[i])")
+}
+
+
+
+for name in names[...2] {
+    print(name)
+}
+
+
+```
+
+#### 2) 배열의 서브스크립트 문법과 함께 사용
+
+```
+
+names[...2]
+
+names[..<1]
+
+```
+
+#### 3) switch문의 케이스에서 사용
+
+```
+var num = 23
+
+switch num {
+case 10...19:
+    print("10대 입니다.")
+case 20...29:
+    print("20대 입니다.") //20..29 ~= 23
+case 30...39:
+    print("30대 입니다.")
+default:
+    print("그 외의 범위 입니다.")
+}
+```
+
+### 3) 패턴매칭 연산자(~=)
+
+- 숫자가 범위내에 있는지 확인하는 연산자
+
+````
+let range = 1...100
+
+range ~= 65
+
+print(range ~= 65) ->true 출력
+
+// 결과 값은 참과 거짓
+
+- **10 <= n <= 100 이런 문장은 스위프트에서 성립하지 않는다.**
+
+
+```swift
+var n = 20
+
+
+if n >= 10 && n <= 100 {
+    print("10이상, 100이하입니다.")
+}
+
+
+if 10...100 ~= n {
+    print("10이상, 100이하입니다.")
+}
+````
