--- a/swift/섹션 12/섹션 12.md
+++ b/swift/섹션 12/섹션 12.md
@@ -1,6 +1,6 @@
-# 섹션 12
+# 섹션 12:옵셔널
 
-## 옵셔널
+## 옵셔널 타입의 기본개념:43강
 
 ### 스위프트는 왜 옵셔널이라는 개념을 도입했을까?
 
@@ -134,4 +134,43 @@ var numB: Int? = 7
 
 
 //print(numA + numB)
+
+```
+
+## 옵셔널값의 추출 방법:44강
+
+### 옵셔널 타입 사용하기
+
+- 옵셔널 타입:값이 있을 수도 있고 없을 수도 있는 경우를 포함하는(감싸고) 있는 임시적 타입
+
+```
+var num: Int?
+var str: String? = "안녕하세요"
+
+
+print(num)
+print(str)
+```
+
+### 옵셔널(Optional) 타입을 추출하는 4가지 방법
+
+- 1. 강제로 값을 추출(Forced Unwrapping):값이 있다는 것이 확실할 때 사용
+
+```
+// 강제 추출연산자 !를 옵셔널표현식 뒤에 붙여서 강제로 옵셔널값을 추출
+
+
+
+print(str!)
+
+
+//print(num!)       // 에러
+```
+
+- 2. if문으로 nil이 아니라는 것을 확인한 후, 강제로 벗기기
+
+```
+if str != nil {
+    print(str!)
+}
 ```
