--- a/swift/섹션 12/섹션 12.md
+++ b/swift/섹션 12/섹션 12.md
@@ -167,10 +167,76 @@ print(str!)
 //print(num!)       // 에러
 ```
 
-- 2. if문으로 nil이 아니라는 것을 확인한 후, 강제로 벗기기
+- 2). if문으로 nil이 아니라는 것을 확인한 후, 강제로 벗기기
 
 ```
 if str != nil {
     print(str!)
 }
+```
+
+- 3. 옵셔널 바인딩(if let 바인딩) ⭐️⭐️⭐️
+
+```
+
+if let s = str {    // s라는 상수에 담긴다면    // nil
+    print(s)
+}
+
+
+
+
+
+var optionalName: String? = "홍길동"
+
+
+
+if let name = optionalName {
+    print(name)
+}
+
+
+
+// 실제 앱을 만들때 guard let 바인딩 많이 사용
+
+func doSomething(name: String?) {
+    guard let n = name else { return }
+    print(n)
+}
+
+
+doSomething(name: "hello")
+```
+
+- 4. 닐 코엘레싱(Nil - Coalescing):연산자를 사용하는 방법
+
+- 코얼레스(coalesce): 영어로 (더 큰 덩어리로) 합친다는 뜻
+
+```
+// 옵셔널 타입에 대하여, 디폴트(기본)값을 제시할 수 있을 때 사용
+// (직접 값을 벗겨서 사용하는 것은 아니고, 디폴트값 제시를 통해 옵셔널 가능성을 없애는 방법)
+
+
+// String? ====> String
+
+
+var serverName: String? = "홍길동"
+
+
+var userName = serverName ?? "미인증사용자"    // String타입
+
+
+
+
+var hello = "인사하겠습니다. " + (str ?? "Say, Hi")
+print(hello)
+
+
+
+str = nil
+print(str ?? "Say, Hi")
+
+
+
+// 백그라운드 기본 색상이 선택이 안되어 있으면 ====> 회색
 ```
