--- a/swift/섹션 13/섹션 13.md
+++ b/swift/섹션 13/섹션 13.md
@@ -1,3 +1,128 @@
 # 섹션 13:컬렉션
 
-##
+## 스위프트 컬렉션의 기본 개념 / 배열:46강
+
+### 스위프트 컬렉션(Collection):데이터를 효율적으로 관리하기 위한 자료형(타입)
+
+- 배열(Array), 딕셔너리(Dictionary), 세트(Set)
+
+- 스위프트에서 사용하는 여러개의 데이터를 한꺼번에 다루는 바구니 타입
+
+- 1. Array (배열): 데이터를 순서대로 저장하는 컬렉션
+
+- 2. Dictionary (딕셔너리): 데이터를 키와 값으로 하나의 쌍으로 만들어 관리하는 순서가 없는 컬렉션
+
+- 3. Set (집합): 수학에서의 집합과 비슷한 연산을 제공하는, 순서가 없는 컬렉션
+
+### 1) 배열(Array):데이터를 순서대로 저장하는 컬렉션
+
+- [] 대괄호로 묶는다. 배열의 인덱스의 시작은 0부터(모든 프로그래밍 공통)
+
+- 1개의 배열에는 동일한 타입의 데이터만 담을 수 있다.
+
+- (순서가 있기 때문에) 중복 가능
+
+```
+
+var numsArray = [1, 2, 3, 4, 5] // 배열 리터럴로 배열을 생성해서 저장
+
+let numsArray1 = [20, 2, 7, 4, 5, 7]
+
+var stringArray = ["Apple", "Swift", "iOS", "Hello"]
+
+```
+
+### 배열의 타입 표기
+
+```
+// 정식문법
+let strArray1: Array<Int> = []
+
+
+// 단축문법
+let strArray2: [String] = []
+
+```
+
+### 빈 배열의 생성
+
+```
+let emptyArray1: [Int] = []
+let emptyArray2 = Array<Int>()
+let emptyArray3 = [Int]()
+
+
+```
+
+### 배열의 기본 기능
+
+```
+numsArray.count
+numsArray.isEmpty
+
+
+numsArray.contains(1)  //파라미터로 값을 전달
+numsArray.contains(8)
+
+
+numsArray.randomElement()
+
+
+numsArray.swapAt(0, 1)
+
+```
+
+### 배열의 각 요소(element)에 대한 접근
+
+```
+numsArray = [1, 2, 3, 4, 5]   // 배열 리터럴
+stringArray = ["Apple", "Swift", "iOS", "Hello"]
+
+
+// [] 서브스크립트 문법(대괄호를 이용한 특별한 함수)
+
+stringArray[0]
+stringArray[1]
+stringArray[2]
+stringArray[3]
+
+
+
+
+stringArray[1] = "Steve"
+print(stringArray)
+
+
+
+stringArray.first   // 리턴값 String?  ====> 빈 배열이라면 nil 리턴
+stringArray.last
+
+
+// 배열의 시작 인덱스
+stringArray.startIndex
+
+stringArray.endIndex
+//stringArray.endIndex.advanced(by: -1)
+
+
+stringArray[stringArray.startIndex]
+
+stringArray[stringArray.endIndex - 1]
+//stringArray[stringArray.index(before: stringArray.endIndex)]
+
+
+
+//stringArray.index(<#T##i: Int##Int#>, offsetBy: <#T##Int#>)
+
+
+
+stringArray.firstIndex(of: "iOS")     // 앞에서 부터 찾았을때 "iOS"는 배열의 (앞에서부터) 몇번째
+
+stringArray.lastIndex(of: "iOS")     // 뒤에서 부터 찾았을때 "iOS"는 배열의 (앞에서부터) 몇번째
+
+
+
+if let index = stringArray.firstIndex(of: "iOS") {
+    print(index)
+}
+```
