--- a/swift/섹션 13/섹션 13.md
+++ b/swift/섹션 13/섹션 13.md
@@ -587,3 +587,81 @@ dic.removeValue(forKey: "A")   // 다시 삭제해보기 ===> nil리턴
 dic.removeAll()
 dic.removeAll(keepingCapacity: true)
 ```
+
+## 딕셔너리 다루기:50강
+
+### 딕셔너리의 비교
+
+```
+let a = ["A": "Apple", "B": "Banana", "C": "City"]
+let b = ["A": "Apple", "C": "City", "B": "Banana"]
+
+
+// 비교 연산자
+a == b   // true
+// 딕셔너리는 원래 순서가 없기 때문에, 순서는 상관없음
+// (순서 상관없이 무조건 true나옴 - Hashable하기 때문에, 순서 상관없이 비교가능)
+
+
+a != b   // false
+
+```
+
+### 딕셔너리의 활용
+
+```
+// 딕셔너리의 중첩 사용
+
+var dict1 = [String: [String]]()        // 딕셔너리 밸류에 "배열"이 들어갈 수도 있다.
+
+
+dict1["arr1"] = ["A", "B", "C"]
+dict1["arr2"] = ["D", "E", "F"]
+dict1
+
+//dict1["arr"] = "A"
+
+
+
+var dict2 = [String: [String: Int]]()     // 딕셔너리 안에 딕셔너리가 들어갈 수 있다.
+
+dict2["dic1"] = ["name": 1, "age": 2]
+
+dict2["dic2"] = ["name": 2, "age": 4]
+
+dict2
+
+```
+
+### 반복문과의 결합
+
+```
+// 딕셔너리 열거해서 프린트 하기
+
+let dict = ["A": "Apple", "B": "Banana", "C": "City"]
+
+
+// 딕셔너리는 열거하지 않아도, Named 튜플 형태로 하나식 꺼내서 전달
+// 순서가 없으므로, 실행마다 순서가 달라짐 ⭐️
+
+
+
+// 데이터 바구니이기 때문에,
+// 차례대로 하나씩 꺼내서 사용하는 경우가 많을 수 있어서 아래처럼 활용 가능
+
+
+for (key, value) in dict {
+    print("\(key): \(value)")
+}
+
+
+for (key, _) in dict {
+    print("Key :", key)
+}
+
+
+for (_, value) in dict {
+    print("Value :", value)
+}
+
+```
