--- a/swift/섹션 13/섹션 13.md
+++ b/swift/섹션 13/섹션 13.md
@@ -665,3 +665,78 @@ for (_, value) in dict {
 }
 
 ```
+
+## 집합(Set):51강
+
+### 3) 세트(Set)
+
+- 집합:수학에서의 집합과 비슷한 연산을 제공하는 컬렉션
+
+- 생김새는 배열과 같음(따라서 생성시 타입을 선언해야함)
+
+- 수학에서의 집합과 동일하기 때문에 요소는 유일해야함(순서가 존재하지 않음)
+
+```
+var set: Set = [1, 1, 2, 2, 3, 3, 3]
+
+print(set)
+
+```
+
+### Set을 언제 사용하는가?
+
+- Set의 값과 Dictionary의 키값은 Hashable
+
+- 정렬순서보다 검색속도가 중요한 경우에 사용
+
+-검색에 내부적으로 Hashing 알고리즘 사용
+
+- Hashing:특정값을 고정된 길이의 값으로 변환하는 기법으로 인덱싱과 암호화에서 자주 사용됨
+
+- 또는 유일하면서 집합의 수학적인 개념(합집합 / 교집합 / 차집합 / 대칭차집합)을 이용할 필요가 있을떄 사용(집합을 계산하기 간편한 함수를 내장)
+
+### Set의 타입 표기
+
+```
+// 단축문법
+let set1: Set = [1, 2, 3]
+
+// 정식문법
+let set2: Set<Int> = [1, 2, 3]
+
+
+```
+
+### 빈 set의 생성
+
+```
+let emptySet: Set<Int> = []
+let emptySet1 = Set<Int>()
+```
+
+### Set의 기본 기능
+
+```
+set.count
+set.isEmpty
+
+
+set.contains(1)
+set.randomElement()
+```
+
+### 업데이트: 삽입 / 교체 / 추가
+
+```
+// 서브스크립트 관련 문법 없음 ⭐️
+
+
+
+// (정식 기능) 함수 문법
+
+set.update(with: 1)     // Int?
+
+
+set.update(with: 7)     // 새로운 요소가 추가되면 ====> 리턴 nil
+
+```
