--- a/swift/섹션 5/섹션 5.md
+++ b/swift/섹션 5/섹션 5.md
@@ -335,3 +335,55 @@ func someFunction2(completionHandler: Something) {
 
 }
 ```
+
+## 프로그래밍 용어 정리: 스위프트 이외에도 사용되는 기본 용어 정리
+
+- ### 키워드(Keyword):약속어. 프로그래밍 언어에서 의미 있는 단어로 사용하기로 약속한 단어(다른 용도로 사용 불가)
+
+```
+var, let, for, in, as, is, true, nil
+
+```
+
+- ### 리터럴(Literals):코드에서 고정된 값으로 표현되는 문자 (데이터 그 자체)
+
+```
+"홍길동"(문자열 리터럴)
+7(Int 리터럴)
+3.141592(Double 리터럴)
+
+```
+
+- ### 식별자(Identifier):변수, 상수, 함수, 사용자 정의 타입의 이름
+
+```
+<!-- var name = "홍길동"  --> name 식별자 사용
+
+```
+
+- ### 토큰(Token):코드의 가장 작은(더이상 쪼갤 수 없는 최소 단위(키워드, 식별자, 구두점, 연산자, 리터럴)
+
+```
+let
+
+,(콤마)
+
+==
+
+```
+
+- ### 표현식(Expression):값, 변수, 연산자의 조합으로 하나의 결과값으로 평가되는 코드 단위
+
+```
+number + 7
+
+```
+
+- ### 문장(Statement):특정 작업을 실행하는 코드 단위
+
+```
+var name = "홍길동
+
+print(name)
+
+```
