변수와 상수

--- a/swift/변수와 상수.md
+++ b/swift/변수와 상수.md
@@ -1,1 +1,99 @@
-# 변수와 상수
+# 변수와 상수 / 데이터 타입
+
+## 변수와 상수
+
+### 1) 변수(Variables):변하는 데이터를 저장하는 공간(바구니)
+
+> 변수의 이름: 식별자 / 한 영역에 오직 하나의 이름만을 사용해야 함.
+
+- 변수의 의미
+
+> #### 프로그램 동작의 첫번째 단계 -> 메모리에 값(데이터)을 저장 (변수)
+
+```
+var a = 10 // 변수를 선언하면서 저장
+
+var b = 20
+
+b = 25 // 변할 수 있는 데이터 값이니 당연히 값을 변경할 수 있다.
+
+b = b + 5
+
+var c = a + b   // 바인딩: 새로운 공간을 만들고 값을 복사(Copy)해서 저장
+
+print(c)    // 40을 출력
+
+```
+
+##### 변수를 여러개 한꺼번에 선언하는 방법: ,(콤마)로 연결 -> 콤마를 통해서도 선언할 수 있다는 뜻.
+
+```
+var x = 1, y = 10, z = 100
+
+```
+
+#### 변수의 이름 / 이름 짓기 규칙
+
+- 변수의 이름은 소문자로 시작(대문자로 시작하는 것은 권장하지 않음)
+
+- 중간에 숫자가 들어가는 것은 가능하지만 숫자를 첫글자로 시작하는 것은 불가하다.
+
+- 특수문자, 한자, 한글 등 사용가능 하지만, 관습적으로 잘 사용하지는 않음
+
+- 다른 언어(파이썬)에서는 중간에 \_(언더바)를 사용하기도 하지만 스위프트에서는 관습적으로 대문자를 사용한다.
+
+```
+var nameOfYou = "김재혁"
+
+var doSomething = "Study"
+
+var π = 3.1415926
+
+var 你好 = "你好世界"
+
+var 🐶🐮 = "dogcow"
+
+var 변수 = "안녕하세요"
+
+```
+
+#### String Interporation(스트링 인터폴레이션): 문자열 보간법
+
+> 변수를 문자열 안에서 출력하는 방법
+
+```
+var carb = "잡곡밥"
+
+var protein = "닭가슴살"
+
+var fat = "올리브 오일"
+
+var vitamin = "샐러드"
+
+print(carb, protein, fat)
+
+
+print("균형잡힌 식단을 위해 먼저 탄수화물 섭취로는 식이섬유가 풍부한 \(carb)을 준비하였으며, 단백질로는 \(protein)과 불포화지방이 풍부한 \(fat)으로 조리한 오믈렛을 준비하였습니다. 여기에 부족한 비타민을 섭취하기 위하여 \(vitamin)를 같이 곁들여 먹으면 한끼 식사로서 균형잡힌 식단이 될 것입니다.")
+
+```
+
+### 2) 상수(Constants): 변하지 않는 데이터를 저장하는 공간(바구니)
+
+> 상수의 이름: 식별자 / 한 영역에 오직 하나의 이름만을 사용해야 함.
+
+- 변수: 값이 변경 가능한(mutable)
+
+- 상수: 값이 변경 불가능한(Imutable)
+
+- 상수 사용의 이유: 가독성 / 특정 의미를 알아보기 쉽게 하기 위하여
+
+```
+let i = "123"
+
+// i = 456     // -> 변하지 않는 데이터이므로 당연히 에러 발생
+
+print(i)
+
+```
+
+##### 변수와 상수를 통틀어, 변수(저장된 데이터라는 관점에서)라고 일반적으로 부르기도 함
