데이터 타입

--- a/swift/변수와 상수.md
+++ b/swift/변수와 상수.md
@@ -97,3 +97,118 @@ print(i)
 ```
 
 ##### 변수와 상수를 통틀어, 변수(저장된 데이터라는 관점에서)라고 일반적으로 부르기도 함
+
+## 변수 선언의 정식 문법
+
+- 변수의 선언과 저장
+
+#### 변수를 선언하면서 저장(메모리 공간을 먼저 생성하는 동시에 데이터를 저장)
+
+```
+var a: Int = 10
+
+```
+
+## 스위프트의 데이터 타입(Data Types)
+
+### 1) 데이터 타입(Data Types의 이해)
+
+- 타입이 왜 필요할까?
+
+> #### _데이터를 얼마만큼의 크기, 그리고 어떠한 형태로 저장할 것인지에 대한 약속이 필요_
+
+```
+var i: Int = 1
+
+var j: Int = 10
+
+
+// i = 1.5       // 소수점 타입 할당이 안됨
+
+
+var k = i + j
+
+print(k)
+
+
+
+// 타입은 메모리 공간의 크기와 연관이 있다.
+
+```
+
+#### 스위프트(Swift)의 데이터 타입
+
+##### Swift에서 사용하는 데이터타입
+
+1.  Int: 정수(Integer) 🔸
+
+예시) ... -5 -4, -3, -2, -1, 0, 1, 2, 3, 4, 5 ...
+
+2.  Float: 실수(부동소수점) Floating-point Number 6자리 소수점
+
+예시) ... -4.3512, -4.3221, 1.3597, 3.1415 ...
+
+- 실수 타입 / 부동소수(floating - point) 타입
+
+- 소수점 표현 가능(6자리까지의 정보를 정확하게 저장) / 4바이트
+
+- 소수점 아래 6자리가 아닌 전제(정수 / 소수점 포함) 6자리(6자리를 벗어나면 반올림 등의 가능성이 있으므로 주의)
+
+3.  Double: 실수(부동소수점) 15자리 소수점 🔸(Swift에서 주로 사용)
+
+- 실수 타입(Float 타입에 비해 2배의 공간)
+
+- 소수점 표현 가능(15자리까지의 정보를 정확하게 저장) / 8바이트
+
+- 소수점 아래 15자리가 아닌 전체(정수 / 소수점 포함) 15자리(15자리를 벗어나면 반올림 등의 가능성이 있으므로 주의
+
+- Float과 Double은 정밀도에서 많은 차이가 난다.
+
+- (지수와 가수를 나눠서 복잡한 알고리즘으로 저장한다.)
+
+4.  Character: 문자(글자 한개)
+
+예시) "a", "b", "c", "김", " "(공백문자)
+
+5.  String: 문자열 🔸
+
+예시) "Hello", "안녕하세요", "곤니찌와" "123", ""(빈문자열)
+
+- 문자 / 문자열은 반드시 쌍따옴표("")를 붙여야 한다.
+
+6.  Bool: 참과 거짓 🔸
+
+- true or false 를 저장
+
+- 참(true) / 거짓(false) -> 프로그래밍에서 정말 다양한 상황에서 쓰임
+
+7.  기타: UInt, UInt64, UInt32, UInt16, UInt8: 0, 그리고 양의 정수
+
+```
+var b: Int = 10
+
+var c: Double = 99
+
+print(b)        // 정수 10(Int형)
+
+print(c)        // 정수 99가 아닌 실수형으로 표현 되는 99.0
+
+
+let chr: Character = "5"
+
+type(of: chr)           // 타입을 확인하는 방법
+
+
+
+// let chr2: Character = "aa"   // 당연히 에러 발생. 글자 하나이므로
+
+
+let chr3: Character = " "      // 빈문자는 에러발생 그러나 공백문자는 가능
+
+
+let str: String = ""   // 빈문자열 저장가능
+
+
+let str1: String = "안녕하세요"
+
+```
