--- a/swift/변수와 상수 /변수와 상수, 데이터 타입.md
+++ b/swift/변수와 상수 /변수와 상수, 데이터 타입.md
@@ -210,3 +210,150 @@ let str: String = ""   // 빈문자열 저장가능
 let str1: String = "안녕하세요"
 
 ```
+
+## 2) 타입 주석(Type Annotation)
+
+- 변수를 선언하면서, 타입도 명확하게 지정하는 방식
+
+#### 1. 변수를 선언 (타입 선언) -> 메모리 공간을 먼저 생성
+
+```
+var num: Int
+
+```
+
+#### 2. 값을 저장 (초기화) -> 데이터를 저장
+
+```
+num = 100
+
+```
+
+#### 3. 값을 읽기
+
+```
+print(num)
+
+```
+
+#### 자료형을 명확하게 지정
+
+```
+
+var a1: Int = 3
+
+var b1: Int = 4
+
+```
+
+#### 타입 선언과 초기화
+
+```
+var value: Double = 5.345
+
+value = 12.3    // 값 바꾸기
+
+
+var value2 = value
+
+```
+
+## 3) 타입 추론(Type Inference)
+
+- 타입을 지정하지 않아도, 컴파일러가 타입을 유추해서 (알아서 알맞는 타입으로 저장하는) 방식
+
+#### 값을 보고, 어떤 타입인지를 컴파일러가 추론해서 사용함
+
+```
+var name = "제이"
+
+type(of: name)
+
+
+
+var num1 = 2
+
+var num2 = 1.2
+
+var num3 = true
+
+
+type(of: num1)
+
+```
+
+## 4) 타입 안정성(Type Safety)
+
+- 스위프트는 데이터 타입을 명확하게 구분하여 사용하는 언어
+
+> #### 스위프트는 다른 타입끼리 계산할 수 없다.
+
+```
+let num5 = 7
+
+// let num6: Double = num5   // 호환되지 않음(메모리 공간의 크기가 다름)
+
+
+
+let d = 12
+
+let e = 3.14
+
+//let result = d + e   //정상적인 계산 불가능
+
+
+
+
+
+//  소수 + 정수를 더 할 수 없다.
+
+// "안녕" + 5 를 더할 수 없다.
+
+```
+
+## 5) 타입(형) 변환(Type Conversion)
+
+- 타입을 변환해서 사용할 수 있는 방법은 있다!
+
+#### 기존에 메모리에 저장된 값을 다른 형식으로 바꿔서, 새로운 값을 생성해서 다른 메모리 공간에 다시 저장
+
+```
+let str2 = "13579"
+
+let number1 = Int(str2)
+
+print(number1)
+
+
+
+
+
+
+let str3 = "13579.1"
+
+let number2 = Int(str3)
+
+// 타입컨버전이 실패했을 때 ====> nil(값이 없음)이 리턴될 수 있다.
+
+print(number2)
+
+
+
+
+let n = 99
+
+let n2 = Double(n)
+
+print(n2)
+
+
+
+
+
+let n3: Int = Int(2.4)
+
+print(n3)
+
+```
+
+> # 타입이란 결국 데이터를 메모리라는 공간에 얼마만큼의 크기, 어떠한 형태로 저장할 것인지에 관한 문제
