Update 변수와 상수, 데이터 타입.md

--- a/swift/변수와 상수 /변수와 상수, 데이터 타입.md
+++ b/swift/변수와 상수 /변수와 상수, 데이터 타입.md
@@ -356,4 +356,4 @@ print(n3)
 
 ```
 
-> # 타입이란 결국 데이터를 메모리라는 공간에 얼마만큼의 크기, 어떠한 형태로 저장할 것인지에 관한 문제
+> ## 타입이란 결국 데이터를 메모리라는 공간에 얼마만큼의 크기, 어떠한 형태로 저장할 것인지에 관한 문제
