변수와 상수

--- a/swift/변수와 상수 /변수와 상수, 데이터 타입.md
+++ b/swift/변수와 상수 /변수와 상수, 데이터 타입.md
@@ -357,3 +357,114 @@ print(n3)
 ```
 
 > ### 타입이란 결국 데이터를 메모리라는 공간에 얼마만큼의 크기, 어떠한 형태로 저장할 것인지에 관한 문제
+
+## 타입 애일리어스(Type Alias)
+
+- 별칭 붙이기: 수학에서 치환과 유사
+
+#### 기존에 선언 되어있는 타입에 새로운 별칭을 붙여 코드 가독성을 높이는 문법
+
+```
+typealias Name = String // 왼쪽에 치환된 별칭이 위치
+
+let name: Name = "홍길동" // Name타입이 의미하는 것은 String과 완전히 동일
+
+
+```
+
+# 참고) 프로그래밍 관련 용어 정리
+
+## 1) 키워드(Keyword)
+
+- 약속어(스위프트에서 특별한 의미로 사용하겠다고 미리 정해놓은 단어)
+
+#### 예시) var, func, let, if, true
+
+## 2) 리터럴(Literals)
+
+- 코드에서 고정된 값으로 표현되는 문자 (데이터) 그 자체(Int / Double / String / Character / Bool 리터럴 등)
+
+```
+var a = 4
+
+// "오른쪽에는 정수 4를 넣었다."라고 할 수도 있지만, "오른쪽에는 할당하기 위해 <정수 리터럴>값인 정수4를 넣었다."
+
+var b: Int = 8
+
+
+var name = "홍길동"      // "문자열 리터럴" 값을 넣어야해.
+
+var double = 3.14      //  "더블 리터럴" 값 3.14
+
+
+"안녕"
+
+4.5
+
+```
+
+## 3) 식별자(identifier)
+
+- 변수, 상수, 함수, 사용자 정의 타입의 이름
+
+```
+
+var name1 = "손흥민"    // 식별자 name1
+
+let name2 = "이강인"    // 식별자 name2
+
+```
+
+## 4) 토큰(Token)
+
+- 코드의 가장 작은 단위: 코드에서 더이상 쪼갤 수 없는 최소의 단위 (식별자, 키워드, 구두점, 연산자, 리터럴)
+
+```
+// var
+
+// !=
+
+// 123
+
+// 토큰은 사이에 빈칸을 추가해선 안됨. (다만, 빈칸을 없애는 것은 때때로 괜찮음)
+
+// 프로그래밍에서는 줄바꿈/탭도 빈칸(공백)으로 인식함. 즉, 빈칸이 여러개 띄어있어도 컴퓨터가 인식하기에는 1개의 빈칸으로 봄
+
+// var aaa = 5
+
+```
+
+## 5) 표현식(ExpressionO
+
+- 값, 변수, 연산자의 조합으로 하나의 결과값으로 평가되는 코드 단위
+
+```
+
+// 하나의 값이 나오는 코드
+
+var n = 5   //       ====> 문 장 (할당하는 작업)
+
+17          // 17    ====> 표현식
+
+n           // 5     ====> 표현식
+
+n + 7       // 12    ====> 표현식
+
+n < 5      // false  ====> 표현식
+
+```
+
+## 6) 문장(Statement)
+
+- 문장 또는 구문: 특정 작업을 실행하는 코드 단위
+
+```
+var n2 = 3    // ====> 문장
+
+print(n)      // ====> 문장
+
+print("안녕")  // ====> 문장
+
+```
+
+#### 토큰(키워드) + 표현식(값) ====> 문장(작업을 명령)
