함수 사용시 주의점

--- a/Swift/7.함수/함수 1.md
+++ b/Swift/7.함수/함수 1.md
@@ -256,7 +256,7 @@ func plusFunction(number1 a:Int , number2 b:Int ) -> { }
                 // number1: 아규먼트 레이블
                                   number2: 아규먼트 레이블
 
-                          a:파라미터        b:파라미터
+                          a:파라미터 이름        b:파라미터 이름
                 // 아규먼트 레이블: 파라미터를 외부에서 볼때, 함수 호출시 사용하려는 이름
 
                 (_a:Int, _b:Int) -> 아규먼트 레이블을 생략하고 싶을 때
@@ -413,4 +413,229 @@ numFunction(num1: 3, num2: 7)
 // terminator: "\n" -> 엔터의 의미
 
 // separator: "" -> 글자를 연결 시킴. 띄어쓰기나 부호를 붙일 수 있음
+
+
+```
+
+## 함수 사용시 주의점 ⭐️
+
+- 1. 함수의 파라미터에 대한 정확한 이해
+
+| 구분 | 주의점 |
+
+| --- | --- |
+
+| 1. 파라미터의 이해 | 파라미터는 변수가 아닌 상수(let)이고, 함수 내부적으로만 쓰이므로 값의 변경이 불가능(변경을 하려면 새로운 변수를 선언해야 함.
+
+| 2. Scope(범위) | 함수 내부에서 선언한 변수는 함수 내부에서 밖에 사용 하지 못함(외부 변수는 함수 내에서 접근 가능)
+
+| 3. return 키워드 | 1) 리턴 타입 있는 함수: 리턴 키워드 다음의 표현식을 평가한 다음, 그 결과를 리턴하면서(함수 실행을 중지하고) 함수를 벗어남
+
+| 4. 함수의 실행문(return타입) |
+
+| 5. 함수의 중첩 사용 |
+
+#### 함수의 파라미터
+
+```
+func someAdd(a: Int) -> Int {
+
+    // let a: Int   (값의 변경이 불가능)
+
+    // a = a + 1
+
+    // 변수로 사용하고 싶다면 바인딩 하여 사용       var b = a, return b
+
+    return a
+}
+
+someAdd(a: 5)
+
+```
+
+### 2) 함수 내의 변수의 Scope(스코프)
+
+#### _함수 내에서 선언한 변수의 Scope(범위) ➞ 함수의 바디로 제한됨_
+
+```
+
+func sumOfNum(a: Int) -> Int {
+
+    var sum = 0
+
+    sum += a
+
+    return sum
+}
+
+// sum
+
+
+sumOfNum(a: 3)
+
+```
+
+### 3) return 키워드의 정확한 이해
+
+#### return 키워드의 역할
+
+- 1.  리턴타입이 있는 함수의 경우(아웃풋이 있는 경우):
+
+      리턴 키워드 다음의 표현식을 평가한 다음에 그 결과를 리턴하면서 함수를 벗어남
+
+- 2.  리턴타입이 없는 함수의 경우(아웃풋이 없는 경우):
+
+      함수의 실행을 중지하고 함수를 벗어남 ⭐️
+
+#### 리턴 타입이 있는 경우
+
+```
+
+
+func addFunction(num1: Int, num2: Int) -> Int {
+
+    var result = num1 + num2
+
+    return result
+}
+
+
+
+addFunction(num1: 3, num2: 4)
+
+
+func valuationFunction(num: Int) -> Int {
+
+    if num >= 5 {
+        return num
+    }
+
+    return 0
+}
+
+
+
+valuationFunction(num: 3)
+
+valuationFunction(num: 5)
+
+```
+
+#### 리턴 타입이 없는 경우
+
+```
+func numberPrint(n num: Int) {
+
+    if num >= 5 {
+
+        print("숫자가 5이상입니다.")
+
+        return
+
+       /*
+
+       return 타입이 없는데도 불구하고 return을 사용하는 것은
+
+       이 함수를 벗어난다는 의미이다. 즉 함수를 종료한다는 의미이다.
+
+       따라서 리턴 키워드를 사용하면 중괄호 내부의 코드만을 실행하게 된다.
+
+       */
+
+
+
+    }
+
+    print("숫자가 5미만입니다.")
+}
+
+
+numberPrint(n: 7)
+
+numberPrint(n: 4)
+
+numberPrint(n: 5)
+
+```
+
+### 4) 리턴 타입이 있는 함수를 호출하는 경우, 함수를 호출하는 것은 표현식
+
+- 표현식의 결과는 함수가 리턴하는 값
+
+```
+func nameString() -> String {
+
+    return "스티브"
+
+}
+
+
+var yourName: String = nameString()           // "스티브"
+
+
+
+
+if nameString() == "스티브" {
+
+    print("이름이 일치합니다.")
+
+}
+
+
+
+
+// var yourName: () -> String = nameString
+
+```
+
+### 5) 함수의 중첩 사용 - 중첩된 함수(Nested Functions)
+
+- 함수 안에 함수를 작성할 수도 있다.
+
+- (함수 안에 있는 함수는 밖에서 사용이 불가능)
+
+- 함수를 제한적으로 사용하고 싶을 때, 사용
+
+```
+
+
+func chooseStepFunction(backward: Bool, value: Int) -> Int {
+
+    func stepForward(input: Int) -> Int {
+        return input + 1
+    }
+
+    func stepBackward(input: Int) -> Int {
+        return input - 1
+    }
+
+    // 위의 두 함수는 선언문이기 때문에 실행되지 않는다.
+
+    // 실행은 if문으로부터 시작이 되면서부터 위의 두 함수를 실행시키게 된다.
+
+    if backward {
+        return stepBackward(input: value)
+    } else {
+        return stepForward(input: value)
+    }
+
+}
+
+
+
+
+
+
+var value = 7
+
+// case 1
+
+chooseStepFunction(backward: true, value: value)
+
+
+// case 2
+
+chooseStepFunction(backward: false, value: value)
+
+
 ```
