--- a/Swift/7.함수/함수 1.md
+++ b/Swift/7.함수/함수 1.md
@@ -425,15 +425,15 @@ numFunction(num1: 3, num2: 7)
 
 | --- | --- |
 
-| 1. 파라미터의 이해 | 파라미터는 변수가 아닌 상수(let)이고, 함수 내부적으로만 쓰이므로 값의 변경이 불가능(변경을 하려면 새로운 변수를 선언해야 함.
+| 1. 파라미터의 이해 | 파라미터는 변수가 아닌 상수(let)이고, 함수 내부적으로만 쓰이므로 값의 변경이 불가능(변경을 하려면 새로운 변수를 선언해야 함.|
 
-| 2. Scope(범위) | 함수 내부에서 선언한 변수는 함수 내부에서 밖에 사용 하지 못함(외부 변수는 함수 내에서 접근 가능)
+| 2. Scope(범위) | 함수 내부에서 선언한 변수는 함수 내부에서 밖에 사용 하지 못함(외부 변수는 함수 내에서 접근 가능)|
 
-| 3. return 키워드 | 1) 리턴 타입 있는 함수: 리턴 키워드 다음의 표현식을 평가한 다음, 그 결과를 리턴하면서(함수 실행을 중지하고) 함수를 벗어남
+| 3. return 키워드 | 1) 리턴 타입 있는 함수: 리턴 키워드 다음의 표현식을 평가한 다음, 그 결과를 리턴하면서(함수 실행을 중지하고) 함수를 벗어남|
 
-| 4. 함수의 실행문(return타입) |
+| 4. 함수의 실행문(return타입) | |
 
-| 5. 함수의 중첩 사용 |
+| 5. 함수의 중첩 사용 | |
 
 #### 함수의 파라미터
 
