--- a/Swift/7.함수/함수 1.md
+++ b/Swift/7.함수/함수 1.md
@@ -639,3 +639,116 @@ chooseStepFunction(backward: false, value: value)
 
 
 ```
+
+## 함수 표기법(지칭), 함수의 타입 표기
+
+- 참고) 함수 표기법
+
+##### 정의문
+
+```
+func doSomething() {
+    print("출력")
+}
+
+
+
+func addPrintFunction(_ firstNum: Int, _ secondNum: Int) {
+    print(firstNum + secondNum)
+}
+
+```
+
+##### 실행문
+
+```
+numberPrint(n: 3)
+
+```
+
+> #### 함수를 지칭하려는 경우, 함수를 어떻게 표기할까?
+
+1.  개발자 문서를 읽을 때 필요
+
+2.  함수를 지칭할때 필요(함수를 변수에 담거나)
+
+#### 함수의 표기법(함수를 지칭시)
+
+##### 1) 파라미터가 없는 경우, ()를 삭제
+
+- 소괄호가 빠져있다면, 함수를 지칭하는 것이다.
+
+```
+doSomething
+
+var some = doSomething
+
+```
+
+- some이라는 변수에 doSomething이라는 함수를 담았다.
+
+- 즉 some이라는 변수가 doSomething이라는 함수를 '지칭'한다.
+
+- doSomething이라는 함수를 some이라는 변수로도 실행 가능하다는 것이다.
+
+- some 이라는 변수로 실행 시키는 것이 아닌 소괄호를 사용하여 실행 가능하다.
+
+```
+some()
+
+```
+
+###### 2) 아규먼트 레이블이 있는 경우, 아규먼트 레이블까지를 함수의 이름으로 봄
+
+- 파라미터가 있는 경우에는 타입을 지우고 아규먼트 레이블로 함수를 지칭
+
+```
+numberPrint(n:)        //  "numberPrint n 함수이다."
+
+```
+
+##### 3) 파라미터가 여러개인 경우, 콤마없이 아규먼트 이름과 콜론을 표기
+
+- 함수를 지칭함으로서 변수에다가 함수를 담을 수 있다.
+
+```
+chooseStepFunction(backward:value:)
+
+```
+
+##### 4) 아규먼트 레이블이 생략된 경우, 아래와 같이 표기
+
+- 콤마(,)가 없어야 한다.
+
+```
+addPrintFunction(_:_:)
+```
+
+### 함수 타입의 표기
+
+###### 변수에 정수를 저장하는 경우에 타입 표기
+
+```
+var num: Int = 5
+
+```
+
+###### 함수의 타입 표기 방법
+
+```
+var function1: (Int) -> () = numberPrint(n:)
+
+// 함수의 타입:(Int) -> ()
+
+var function2: (Int, Int) -> () = addPrintFunction(_:_:)
+
+// 함수의 타입: (Int, Int) -> () or Void (Void는 ()로 표현 가능)
+
+// () -> () == () -> Void
+
+// 일반적으로 인풋에는 Void를 쓰지 않는다. 아웃풋에 Void 사용
+
+// 변수가 함수를 가르키도록 할 수 있음
+
+function2(3, 5)
+```
