--- a/Swift/7.함수/함수 1.md
+++ b/Swift/7.함수/함수 1.md
@@ -423,11 +423,11 @@ numFunction(num1: 3, num2: 7)
 
 | 번호 | 제목                      | 내용                                                                                                                                        |
 | ---- | ------------------------- | ------------------------------------------------------------------------------------------------------------------------------------------- |
-| 1)   | 파라미터의 이해           | 파라미터는 변수가 아닌 상수(let)이고, 함수 내부적으로만 쓰이므로 값의 변경이 불가능(변경을 하려면 새로운 변수를 선언해야 함.                |
-| 2)   | Scope(범위)               | 함수 내부에서 선언한 변수는 함수 내부에서 밖에 사용 하지 못함(외부 변수는 함수 내에서 접근 가능)                                            |
-| 3)   | return 키워드             | 1) 리턴 타입 있는 함수: 리턴 키워드 다음의 표현식을 평가한 다음, 그 결과를 리턴하면서(함수 실행을 중지하고) 함수를 벗어남                   |
-| 4)   | 함수의 실행문(return타입) | 리턴 타입이 있는 함수를 호출하는 경우, 함수를 호출하는 것은 자체로 표현식(결과는 함수가 리턴하는 값)이라는 것을 인지하고 사용할 필요가 있음 |
-| 5)   | 함수의 중첩 사용          | 함수 내부에서 함수를 작성하여 사용하는 것도 가능(다만, 외부에서 내부 함수는 접근 불가능).                                                   |
+| _1)_ | 파라미터의 이해           | 파라미터는 변수가 아닌 상수(let)이고, 함수 내부적으로만 쓰이므로 값의 변경이 불가능(변경을 하려면 새로운 변수를 선언해야 함.                |
+| _2)_ | Scope(범위)               | 함수 내부에서 선언한 변수는 함수 내부에서 밖에 사용 하지 못함(외부 변수는 함수 내에서 접근 가능)                                            |
+| _3)_ | return 키워드             | 1) 리턴 타입 있는 함수: 리턴 키워드 다음의 표현식을 평가한 다음, 그 결과를 리턴하면서(함수 실행을 중지하고) 함수를 벗어남                   |
+| _4)_ | 함수의 실행문(return타입) | 리턴 타입이 있는 함수를 호출하는 경우, 함수를 호출하는 것은 자체로 표현식(결과는 함수가 리턴하는 값)이라는 것을 인지하고 사용할 필요가 있음 |
+| _5)_ | 함수의 중첩 사용          | 함수 내부에서 함수를 작성하여 사용하는 것도 가능(다만, 외부에서 내부 함수는 접근 불가능).                                                   |
 
 ##### _실제로는 함수를 자주 사용하다 보면, 익숙해지는 부분이기 때문에 굳이 외울 필요는 없음._
 
