--- a/Swift/7.함수/함수 2.md
+++ b/Swift/7.함수/함수 2.md
@@ -64,6 +64,8 @@ doSomething(value: 3)
 
 > Scope: 함수, if ,for문 등에 모두 해당
 
+#### _코딩에서의 대원칙: 중괄호 내에서 밖의 변수는 접근 가능, 중괄호 밖에서 중괄호 내부의 변수는 접근 불가능_
+
 1.  변수는 코드에서 선언이 되어야, 그 이하의 코드에서 접근 가능(선언하기 이전에는 접근 불가함) (전역변수는 예외)
 
 2.  상위스코프(범위)에 선언된 변수와 상수에 접근가능하며, 하위스코프(범위)에는 접근할 수 없다.
