--- a/Swift/7.함수/함수 2.md
+++ b/Swift/7.함수/함수 2.md
@@ -157,3 +157,135 @@ func sayGreeting1() {
 // sayGreeting2()
 
 ```
+
+# 제어전송문 정리
+
+- Swift에서 사용하는 제어전송 명령문(흐름 제어)
+
+|키워드|쓰이는 경우|경우|
+
+|---|---|---|
+
+|
+
+## 1) Break
+
+- (1) switch문 (2) 반복문(for/while 등) 에서 사용
+
+```
+var a = 3
+
+switch a {
+case 1:
+    break      // 실행하는 문장이 없을때, 반드시 입력 (약속)
+case 2:
+    print(a)
+case 3:
+    print("3입니다.")
+case 4:
+    print("안녕하세요")
+default:
+    break
+}
+
+
+
+// 가장 인접한 반복문을 아예 중지 ⭐️
+
+for index in 1...10 {
+
+    if index == 3 {
+        break
+    }
+
+    print(index)
+}
+
+
+```
+
+## 2) Fallthrough
+
+- switch문에서 사용
+
+```
+switch a {
+case 1:
+    break      // 실행하는 문장이 없을때, 반드시 입력 (약속)
+case 2:
+    print(a)
+case 3:
+    print("3입니다.")
+    fallthrough
+case 4:
+    print("안녕하세요.")
+default:
+    break
+}
+
+
+// 3입니다.
+
+// 안녕하세요.
+
+```
+
+## 3) continue
+
+- 반복문에서 사용(for/ while 등)
+
+```
+for index in 1...10 {
+
+    if index % 2 != 0 {
+        continue
+    }
+
+    print(index)
+}
+```
+
+> ##### continue는 반복문을 다음 싸이클로 보냄
+
+- 다음 싸이클에서 계속 지속(continue)하라는 의미
+
+1. 반복문의 첫번째 index는 1
+
+2. 1은 2로 나눴을 때 나머지가 1이므로 참
+
+3. 조건이 참이므로 continue를 만남
+
+4. 첫 문장을 실행시키지 않고 다음 사이클(index = 2)로 넘어감
+
+5. 2는 나머지가 0이므로 거짓, 따라서 continue를 실행시키지 않음
+
+6. 즉 if문을 실행시키지 않고 if문 다음의 print(index)를 실행
+
+7. 홀수 숫자는 continue를 만나고 짝수는 print 함수를 만남. 짝수가 출력됨
+
+## 4) return
+
+- 함수에서 사용
+
+```
+func doSomething() {
+    print("1")
+    print("2")
+
+    if true {
+        return
+    }
+
+    // 리턴 타입이 없으므로 함수의 실행을 중지하고 함수를 벗어남
+
+    print("3")
+
+    print("4")
+
+}
+
+
+doSomething()
+
+
+```
