제어전송문

--- a/Swift/7.함수/함수 2.md
+++ b/Swift/7.함수/함수 2.md
@@ -162,11 +162,15 @@ func sayGreeting1() {
 
 - Swift에서 사용하는 제어전송 명령문(흐름 제어)
 
-|키워드|쓰이는 경우|경우|
-
-|---|---|---|
-
-|
+| 키워드      | 쓰이는 경우 | 설명                                                                                                                                                            |
+| ----------- | ----------- | --------------------------------------------------------------------------------------------------------------------------------------------------------------- |
+| break       | switch      | 1) switch문: 케이스에서 실행하는 문장이 없을때, break문을 반드시 입력해야함.                                                                                    |
+| break       | 반복문      | 2) 반복문: 가장 인접한 반복문의 모든 싸이클을 아예 중지(break)하고 반복문 다음 문장을 실행                                                                      |
+| fallthrough | switch      | switch문에서 매칭된 값에 대한 고려없이, 무조건 다음 문장도 실행하려 할때 입력                                                                                   |
+| continue    | 반복문      | 반복문에서 다음 반복문의 싸이클로 넘어가서 계속(continue 실행함)                                                                                                |
+| return      | 함수        | 1) 리턴 타입이 있는 함수: 리턴 키워드 다음의 표현식을 평가한 다음, 그 결과를 리턴하면서(함수 실행을 중지하고) 함수를 벗어남.                                    |
+| return      | 함수        | 2) 리턴 타입이 없는 함수: 함수의 실행을 중지하고 벗어남                                                                                                         |
+| throw       | 함수        | 에러가 발생 가능하도록 정의된 함수에서, throw 키워드 다음에 정의된 에러의 타입을 리턴하면서(함수의 실행을 중지하고) 함수를 벗어남(에러 처리 부분에서 다룰 예정) |
 
 ## 1) Break
 
