--- a/Swift/7.함수/함수 3.md
+++ b/Swift/7.함수/함수 3.md
@@ -1,1 +1,60 @@
 # 함수 Ⅲ
+
+## 함수 실행의 메모리 구조
+
+- 플레이 그라운드에 대한 가정 (메모리 구조를 더 잘 이해하기 위함)
+
+- #### 프로그래밍에서, 가장 처음으로 프로그래밍이 시작되는 곳은 main() 메인함수 (스위프트에서는 main.swift파일)
+
+- #### 플레이 그라운드는 문법을 쉽게 공부하기 위한 목적이므로 main() 함수는 눈에 보이지 않지만, 구현이 되어있다고 가정
+
+```
+func main() {
+
+    var name = "홍길동"
+
+    // 우리가 현재 구현하는 곳 ====> 현재의 플레이그라운드
+
+
+}
+
+
+main()    // 앱을 키면 ====> 프로그램을 실제 시작시킴
+
+```
+
+### addTwoNumbers(a: Int, b: Int) 함수
+
+```
+func addTwoNumbers(a: Int, b: Int) -> Int {
+
+    var c = a + b
+
+    return c
+}
+
+
+
+var num1 = 5    // 이 예제에서는 전역변수가 아닌 main()함수의 영역이라고 가정
+
+var num2 = 3    // 이 예제에서는 전역변수가 아닌 main()함수의 영역이라고 가정
+
+var num3 = addTwoNumbers(a: num1, b: num2)
+
+print(num3)
+
+```
+
+#### 함수의 실행
+
+함수의 실행이란 그 함수 자체가 필요한 메모리 공간,
+
+즉 스택 프레임을 만드는 것을 하는 것이다.
+
+스택 프레임을 만들어서 어떤 일처리를 하고,
+
+그 일처리가 다 끝나면 그 스택 프레임이 사라지게 된다.
+
+프린트도 프린트 함수이기 때문에 스택 프레임 공간에
+
+복귀 주소를 만들어 놓고 실행이 끝나면 프린트의 스택 프레임 영역이 사라지게 된다.
