--- a/Swift/8.옵셔널/옵셔널.md
+++ b/Swift/8.옵셔널/옵셔널.md
@@ -185,7 +185,157 @@ var numB: Int? = 7
 
 
 
-//print(numA + numB)
+// print(numA + numB)
 
 
 ```
+
+## 옵셔널 값을 추출하는 4가지 방법
+
+### 1) 강제로 값을 추출(Forced Unwrapping): 값이 있다는 것이 확실할 때 사용
+
+- 강제 추출연산자 !를 옵셔널표현식 뒤에 붙여서 강제로 옵셔널값을 추출
+
+```
+var str: String? = "안녕하세요"
+
+간편 표기. 정식 표기 -> var str: Optional<Int> = "안녕하세요."
+
+print(str!)
+
+
+```
+
+### 2) if문으로 nil이 아니라는 것 확인한 후, 강제로 벗기기
+
+```
+if str != nil {
+
+    print(str!)
+
+}
+
+if num != nil {
+
+    print(num!)     // num = nil
+
+}
+
+
+```
+
+### 3) 옵셔널 바인딩 (if let 바인딩) ⭐️⭐️⭐️
+
+#### _옵셔널 바인딩 - 바인딩이 된다면, 특정 작업을 하겠다는 의미_
+
+```
+
+if let s = str {    // s라는 상수에 담긴다면    // nil
+
+    print(s)
+
+}
+
+```
+
+> ##### 옵셔널 바인딩
+
+str이라는 메모리 공간에 있는 어떤 옵셔널 값이 s라는 상수에 담긴다면 이라는 뜻
+
+str이라는 옵셔널 타입의 변수를 새로운 공간인 s라는 상수에 바꿔서 담는다는 뜻
+
+바꿔서 담긴다면, 즉 안에 값이 있다면,
+
+나는 이 값을 사용하겠다(우아하게 벗겨서 사용)라는 뜻
+
+만약 "옵셔널 str이라는 값에 nil이 들어있다면, 값이 없다면
+
+s라는 문자열 타입의 상수는 실행시키지 않는다." 라는 뜻이다.
+
+if let 바인딩 문법은 if문에서 예외적으로 조건을 따지지 않는 문법이다.
+
+```
+var optionalName: String? = "홍길동"
+
+
+if let name = optionalName {
+
+    print(name)
+}
+
+```
+
+- print(name):if문 안에서 사용된 name이라는 상수는 당연히 밖에서 사용 불가
+
+- 실제 앱을 만들때 guard let 바인딩 많이 사용
+
+```
+
+func doSomething(name: String?) {
+
+    guard let n = name else { return }  // Optional("Hello")
+
+    print(n)
+}
+
+```
+
+> 그러나 가드문의 경우에는 사용된 변수를 아래에서 사용 가능
+
+```
+func doSomething(name: String?) {
+
+    guard let n = name else { return }  // Optional("Hello")
+
+    print(n)
+}
+
+doSomething(name: "hello")
+
+```
+
+- Optional("hello")가 n 이라는 상수에 벗겨져서 담긴다면, 가드문이 참이므로 함수를
+
+실행시킨다 라는 뜻
+
+- if var 바인딩도 사용 가능하나, 사용하는 일이 거의 없음
+
+- 일반적으로 값을 즉시 사용하기 때문에, 즉 변하는 일이 없기에 대부분 사용 X
+
+### 4) 닐 코얼레싱 (Nil-Coalescing) 연산자를 사용하는 방법
+
+_코얼레싱(coalesce): 영어로 (더 큰 덩어리로) 합치다는 뜻_
+
+- 옵셔널 타입에 대하여, 디폴트(기본)값을 제시할 수 있을 때 사용
+
+- (직접 값을 벗겨서 사용하는 것은 아니고, 디폴트값 제시를 통해 옵셔널 가능성을 없애는 방법)
+
+```
+
+var serverName: String? = "홍길동" // Optional("홍길동")
+
+
+var userName = serverName ?? "미인증사용자"    // String타입
+
+var hello = "인사하겠습니다. " + (str ?? "Say, Hi")
+
+print(hello)
+
+
+str = nil
+
+print(str ?? "Say, Hi")
+
+```
+
+> 닐 코얼레싱: 기본값을 제시해준다. 디폴트 값을 제시한다는 뜻
+
+옵셔널 타입이 있는데(serverName) 값이 "홍길동" 이라면
+
+즉, Optional("홍길동")이라면 나는 "홍길동"을 출력할 것이고
+
+nil이라면 ?? 뒤에 "미인증사용자" 라는 "디 폴 트" 값을 사용하겠다는 뜻.
+
+따라서 이 경우는 nil이 나올 수가 없다. 값이 있으면 "홍길동"을 사용
+
+값이 없으면 디폴트 값인 "미인증사용자"를 사용하기 때문에.
