--- a/Swift/8.옵셔널/옵셔널.md
+++ b/Swift/8.옵셔널/옵셔널.md
@@ -192,6 +192,13 @@ var numB: Int? = 7
 
 ## 옵셔널 값을 추출하는 4가지 방법
 
+| 방법                                         | 설명                                                                        | 사용 경우                        |
+| -------------------------------------------- | --------------------------------------------------------------------------- | -------------------------------- |
+| 1) 강제 추출                                 | nil이 아닌 값이 있다는 것을 확신하고 강제로 값을 추출 (값이 없는 경우 에러) | 웬만한 경우 절대 사용해서는 안됨 |
+| 2) nil이 아닌지 확인후, 강제 추출            | if문을 통해 nil이 아님을 먼저 확인 후, 강제 추출(에러 가능성이 없어짐)      |                                  |
+| 3) 옵셔널 바인딩( if let / guard let 바인딩) | 바인딩(상수나 변수에 대입 )이 되는 경우만 특정 작업을 하겠다는 의미         | 일반적인 경우                    |
+| 4) 4) Nil - Coalscing(닐 코얼레싱)           | 옵셔널 표현식 뒤에 기본값을 제시하여 옵셔널의 가능성을 없앰                 | 디폴트 값 제시 가능한 경우       |
+
 ### 1) 강제로 값을 추출(Forced Unwrapping): 값이 있다는 것이 확실할 때 사용
 
 - 강제 추출연산자 !를 옵셔널표현식 뒤에 붙여서 강제로 옵셔널값을 추출
