--- a/Swift/7.함수/함수 3.md
+++ b/Swift/7.함수/함수 3.md
@@ -58,3 +58,75 @@ print(num3)
 프린트도 프린트 함수이기 때문에 스택 프레임 공간에
 
 복귀 주소를 만들어 놓고 실행이 끝나면 프린트의 스택 프레임 영역이 사라지게 된다.
+
+## 예시를 통한 이해
+
+- 함수 실행시, 실제 메모리에서 어떻게 동작할까?
+
+```
+
+var total: Int = 0    // 실제 전역변수라면 (데이터영역에 저장됨)
+
+
+func square(_ i: Int) -> Int {     // x 제곱
+
+    return i * i
+}
+
+
+func squareOfSum(_ x: Int, _ y: Int) -> Int {    // (x + y)(x + y)
+
+    var z = square(x + y)
+
+    return z
+
+}
+
+
+func startFunction() {
+
+    var a = 4
+
+    var b = 8
+
+    total = squareOfSum(a, b)
+}
+
+```
+
+> func main() 여기서부터가 메인함수 영역
+
+```
+startFunction()
+
+```
+
+- 데이터 영역과 힙 영역은 공유되는 부분. 그래서 어디에서나 접근 가능
+
+- 그러나 스택 영역은 공유되는 부분이 아니다.
+
+### 함수와 변수의 변화 예제
+
+```
+var a = 1       // 실제 전역변수라면
+
+var b = 1       // 실제 전역변수라면
+
+
+func addOneMore2() -> Int {
+    b += 1
+    return 5
+}
+
+
+func addOneMore1() {
+    var num = 0
+    a += 1
+    num += addOneMore2()
+    print(num)
+}
+
+
+
+addOneMore1()
+```
