조건문과 반복문의 동작 원리

--- a/Swift/7.함수/함수 3.md
+++ b/Swift/7.함수/함수 3.md
@@ -108,6 +108,7 @@ startFunction()
 ### 함수와 변수의 변화 예제
 
 ```
+
 var a = 1       // 실제 전역변수라면
 
 var b = 1       // 실제 전역변수라면
@@ -129,4 +130,53 @@ func addOneMore1() {
 
 
 addOneMore1()
+
+```
+
+## 조건문과 반복문의 명령어(CPU)구조
+
+### 조건문(if문)
+
+```
+var c = 0
+
+func someConditionalStatement(a: Int) {
+
+    if a >= 0 {
+
+        c += 1
+
+    } else {
+
+        c += 7
+    }
+}
+
+
+someConditionalStatement(a: -3)
+
+```
+
+- 스택 프레임을 만드는 것은 함수의 실행일뿐이다.
+
+- 스택 프레임을 만들고 그 안에 메모리 공간을 만드는 것은 오직 함수의 실행만 해당함.
+
+- 조건문이나 반복문은 스택 프레임을 만드는 행위가 아니다.
+
+### 반복문
+
+```
+var d = 0
+
+func someLoop() {
+
+    for i in 1...5 {
+
+        d += i
+    }
+}
+
+
+someLoop()
+
 ```
