--- a/Swift/10.열거형/열거형 2.md
+++ b/Swift/10.열거형/열거형 2.md
@@ -373,4 +373,178 @@ let arrays: [Int?] = [nil, 2, 3, nil, 5]
 for case .some(let number) in arrays {
     print("Found a \(number)")
 }
+
+```
+
+## 옵셔널 패턴(Optional Pattern)
+
+- 옵셔널 타입에서 열거형 케이스 패턴을 더 간소화한 옵셔널 패턴(Optional Pattern)
+
+#### _열거형 내부에 "연관값"을 사용시 ➞ 1) 열거형 케이스 패턴 / 2) 옵셔널 패턴_
+
+```
+let a: Int? = 1
+
+
+// 1) 열거형 케이스 패턴 (앞에서 배운)
+
+switch a {
+case .some(let z):
+    print(z)
+case .none:  // nil이라고 써도됨
+    print("nil")
+}
+
+
+// 2) 옵셔널 패턴 (현재 배울)
+
+switch a {
+case let z?:      // .some을 조금 더 간소화하는 문법
+    print(z)
+case nil:         // .none 이라고 써도됨
+    print("nil")
+}
+
+```
+
+### 옵셔널 패턴의 사례 (열거형 케이스 패턴과 비교)
+
+```
+// 옵셔널타입으로 선언
+
+let num: Int? = 7
+print(num)
+
+
+
+// 1) 열거형 케이스 패턴
+
+switch num {
+case .some(let x):      // let x = num
+    print(x)
+case .none:
+    break
+}
+
+
+// 2) 옵셔널 패턴 (.some을 ? 물음표로 대체 가능한 패턴)
+
+switch num {
+case let x?:           // let x? = Optional.some(num)
+    print(x)
+case .none:
+    break
+}
+
+
+
+// 특정 사례만 다루는 (if문) ================================
+
+// 1) 열거형 케이스 패턴
+
+if case .some(let x) = num {
+    print(x)
+}
+
+
+
+// 2) 옵셔널 패턴 (.some을 ? 물음표로 대체 가능한 패턴)
+
+if case let x? = num {        // "옵셔널(?) 물음표를 띄어내고, x 상수로 보자"의 의미라고 생각하면 됨
+    print(x)
+}
+
+
+```
+
+### 옵셔널 패턴(for문) - 옵셔널타입 요소 배열
+
+```
+// 옵셔널 타입을 포함하는 배열에서 반복문을 사용하는 경우, 옵셔널 패턴을 사용하면 편리함
+
+let arrays: [Int?] = [nil, 2, 3, nil, 5]
+
+
+
+// 1) 열거형 케이스 패턴
+
+for case .some(let number) in arrays {
+    print("Found a \(number)")
+}
+
+
+
+// 2) 옵셔널 패턴
+
+for case let number? in arrays {
+    print("Found a \(number)")
+}
+
+```
+
+## @unknown 키워드
+
+- 만약, 열거형의 케이스가 늘어난다면 항상 올바른 처리를 하고 있다고 말할 수 있을까?
+
+##### 만약에 로그인의 경우의 수가 늘어난다면 (Non-frozen 열거형 / 얼지않은)
+
+- (프로젝트에서 실제 늘어날 수 있는 경우가 많음)
+
+```
+enum LoginProvider: String {      // 3가지 케이스 ===> 4가지 케이스
+    case email
+    case facebook
+    case google
+    case kakaotalk
+}
+
+
+let userLogin = LoginProvider.email
+
+
+
+// 스위치문은 (특히, 열거형)표현식에 대한 분기처리에 최적화
+
+// (다만, 열거형의 케이스가 늘어나는 경우에 대한 안정성 보장은 별개)
+
+switch userLogin {                // 처리하는 방식을 조금 변형
+case .email:
+    print("이메일 로그인")
+case .facebook:
+    print("페이스북 로그인")
+// case .google:
+//    print("구글 로그인")
+default:                         // default블럭만 추가해두는 것이 안전할까? ⭐️
+    print("구글 로그인")
+}
+
+// 여기서는 간단히 눈에 보일 수 있지만, 실제 프로젝트에서는 찾기 힘듦
+
+```
+
+#### _처리하는 로직이 항상 옳다는 보장을 하지 못함_
+
+- 에러는 나지 않을 수 있지만, 로직이 옳다고 할 수 없음
+
+### @unknown 어트리뷰트를 활용하는 방법 - Swift 5.0 ~
+
+- @unknown 키워드를 default블럭에 추가해둠
+
+- switch문에서 열거형의 모든 케이스를 다루지 않는 경우,
+  스위치문에서 모든 열거형의 케이스를 다루지 않았다고
+  경고를 통해 알려줌 ===> 개발자의 실수 가능성을 컴파일 시점에 알려줌
+
+- "Switch must be exhaustive"로 알려줌
+
+```
+switch userLogin {
+case .email:
+    print("이메일 로그인")
+case .facebook:
+    print("페이스북 로그인")
+case .google:
+    print("구글 로그인")
+@unknown default:
+    print("그 외의 모든 경우")
+}
 ```
